Add DbConnection class and set up properties for db connection in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=facebook-post
 server.port=9050
 server.servlet.context-path=/api
+
+db.url=
+db.driver=org.postgresql.Driver
+db.username=
+db.password=
